# ClusterRows

./: .clang-format  .gitignore  Addons.xcu  CMakeLists.txt  ClusterRows.components.tmpl  ClusterRows.oxt  ClusterRows.xdl  DialogHelper.cxx  DialogHelper.hxx  GMMCluster.cxx  GMMCluster.hxx  GMMCluster.xcu  Jobs.xcu  Makefile  README.md  TODO  TODO.md  XGMMCluster.idl  cluster.cxx  cluster.hxx  colorgen.hxx  component.cxx  darwin64.cmake  datatypes.cxx  datatypes.hxx  description-en-US.txt  description.xml  em.cxx  em.hxx  helper.hxx  logging.cxx  logging.hxx  manifest.xml.tmpl  params.hxx  perf.cxx  perf.hxx  preprocess.cxx  preprocess.hxx  range.cxx  range.hxx  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
generators/: genheaders.sh.in  genrdb.sh.in  genurd.sh.in
idl/: XDataCluster.idl  XGMMCluster.idl
inc/: GMMCluster.hxx  cluster.hxx  colorgen.hxx  datatypes.hxx  params.hxx  perf.hxx  range.hxx
src/: GMMCluster.cxx  cluster.cxx  colorgen.cxx  component.cxx  em.cxx  helper.cxx  logging.cxx  preprocess.cxx  range.cxx
src/cxx/: diagonal.cxx  em.cxx  logging.cxx  matrix.cxx  svd.cxx
src/cxx/gmm/: cluster.cxx  data.cxx  legacy_gmm.cxx  model.cxx  weights.cxx
src/inc/: datamatrix.hxx  diagonal.hxx  em.h  em.hxx  logging.hxx  macros.h  matrix.hxx  svd.hxx
src/inc/gmm/: cluster.hxx  data.hxx  legacy_gmm.hxx  model.hxx  weights.hxx
src/py/: CRJob.py  ClusterRows.py  DataCluster.py  GMMCluster.py  crcolors.py  crlogger.py  crplatform.py  crrange.py  perf.py  showlogs.py  testDataCluster.py  testGMMCluster.py
src/py/faketypes/com/github/: dennisfrancis.py
src/py/faketypes/com/sun/star/: awt.py  sheet.py  task.py
src/py/faketypes/com/sun/star/frame/: DispatchResultState.py
src/py/faketypes/com/sun/star/sheet/: ConditionOperator.py  GeneralFunction.py
src/py/faketypes/com/sun/star/table/: CellContentType.py
test/: gmmTests.cxx  utilTests.cxx
testdocs/: four-clusters.ods  gen_data.py  no-results-full.ods  no-results.ods  three-clusters-full.ods  three-clusters.ods
tmpl/: ClusterRows.components.in  description.xml.in  description.xml.tmpl  manifest.xml.in  manifest.xml.tmpl
xcu/: Addons.xcu  CRNBUI.xcu  DataCluster.xcu  GMMCluster.xcu  Jobs.xcu
xdl/: ClusterRows.xdl
